<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_pdf"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_select_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_pdf"/>

    <Button
        android:id="@+id/btn_upload_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Upload_pdf"
        android:visibility="gone"/>
</LinearLayout>