<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/border">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/school_management_app"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/slogo" />

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:text="@string/create_new_accounte"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/login_to_account"
        android:textColorLink="#4D7FCA"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>