<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpage"
    android:orientation="vertical"
    android:background="@drawable/border"

    >
    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/baseline_person_24"
        android:layout_marginTop="60dp"
        android:id="@+id/person"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_login"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mb"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/time_table"
        android:textSize="20sp"
        android:backgroundTint="@color/light_purple"
        android:textColor="@color/purple"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mb1"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/notice"
        android:textSize="20sp"
        android:backgroundTint="@color/light_purple"
        android:textColor="@color/purple"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mb2"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/attendance"
        android:textSize="20sp"
        android:backgroundTint="@color/light_purple"
        android:textColor="@color/purple"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mb3"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/homework"
        android:textSize="20sp"
        android:backgroundTint="@color/light_purple"
        android:textColor="@color/purple"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mb4"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/syllabus"
        android:textSize="20sp"
        android:backgroundTint="@color/light_purple"
        android:textColor="@color/purple"
        />


</LinearLayout>